Revision history for UFL-WebAdmin-SiteDeploy

0.13
        - Fail more quickly with invalidly structured sites (#121)
        - Update packages extending App::Cmd::Command to use 'execute'
          instead of deprecated 'run' method

0.12  Wed May 13 16:41:06 EDT 2009
        - Handle errors in changing ownership for files that are
          e.g. created from someone else's crontab (#51)

0.11  Mon May 11 17:04:17 EDT 2009
        - Update logging format to make command output easier to read
        - Rename CommitLogger to LogCommit for consistency with other
          roles
        - Add support for updating ownership after an rsync operation

0.10  Tue Dec  9 17:45:15 EST 2008
        - Force stringification on SVN::Notify::Config URI to make
          Subversion 1.5 API happy

0.09  Fri Aug 15 17:43:42 EDT 2008
        - Remove 'requires' declarations in the roles since Moose
          can't see the accessors generated by
          SVN::Notify::register_attributes

0.08  Mon Aug 11 17:24:24 EDT 2008
        - Add logging of SVN::Notify::Mirror command output to attempt
          to catch problems

0.07  Thu Jun 19 15:54:23 EDT 2008
        - Refactor common defaults to
          UFL::WebAdmin::SiteDeploy::TestRepository
        - Declare required attributes as such to make initialization
          errors obvious
        - Remove UFL::WebAdmin::SiteDeploy::Repository and related
          modules in favor of VCI

0.06  Thu Jun 12 14:06:44 EDT 2008
        - Refactor deployment code
        - Add deploy method to UFL::WebAdmin::SiteDeploy::Site
        - Add entries method to UFL::WebAdmin::SiteDeploy::Repository

0.05  Wed Jun 11 17:17:03 EDT 2008
        - Refactor tests
        - Add deploy_site method to
          UFL::WebAdmin::SiteDeploy::Repository for push-button
          deployment

0.04  Thu Jun  5 17:00:14 EDT 2008
        - Improve on tag handling of SVN::Notify::Mirror (changes
          configuration parameter from tag_regex to tag_pattern)